# shipping-szn

./: .cursorrules  .env.example  .gitignore  .replit  ARCHITECTURE_REVIEW.md  CI_TEST_RECOMMENDATIONS.md  LICENSE  README.md  TESTING.md  TESTING_ANALYSIS.md  changelog_template.md  main.py  mcp_servers.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  replit.md  rulesync.jsonc  slack_mcp_server.py  slack_tools.py  slack_tools_simple.py  test-pr-demo.txt  test_media_files_parsing.py  tools.txt
.claude/: settings.local.json
.cursor/rules/: claude-agent-sdk.mdc  documentation.mdc  general.mdc  python-code-style.mdc  security.mdc  testing.mdc
.github/: CODEOWNERS
.rulesync/: .aiignore  mcp.json
.rulesync/rules/: claude-agent-sdk.md  documentation.md  general.md  python-code-style.md  security.md
attached_assets/: Pasted--title-November-06-2025-description-2-min-read-import-AuthorCard-from-snippets-auth-1762449178888_1762449178890.txt
prompts/: changelog_template.md
servers/: config.py  github_tools.py  native_tools.py  slack_tools.py
skills/brand-writing/: BRAND_GUIDELINES.md  SKILL.md
skills/changelog-formatting/: CHANGELOG_TEMPLATE.md  DOCS_STYLE_GUIDE.md  SKILL.md
test/: conftest.py  test_agent_system.py  test_github_token.py  test_integration.py  test_mcp_initialization.py  test_mcp_server.py  test_media_files_parsing.py  test_slack_skip_logic.py  test_smoke.py
tests/: __init__.py  conftest.py  test_main_quick.py  test_mcp_server.py  test_slack_tools.py
updates/: 2025-10-08.md  2025-10-12.md
util/: messages.py
(+7 files in other folders)
