[project]
name = "ccc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "claude-agent-sdk>=0.1.0",
    "python-dotenv>=1.1.1",
    "slack-sdk>=3.33.6",
    "requests>=2.32.3",
    "pytest>=8.4.2",
]
